{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 261,
  "lineage": "8d591826-cdc6-2fd6-efa7-23aac69fc42d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb3fad3c0286ebd5",
            "arn": "arn:aws:ec2:eu-west-1:773845126462:instance/i-024b8a01f05c12c5d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024b8a01f05c12c5d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "class_key01",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09210f839e6ae1e7a",
            "private_dns": "ip-10-0-30-30.eu-west-1.compute.internal",
            "private_ip": "10.0.30.30",
            "public_dns": "ec2-52-31-248-5.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.31.248.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09da8374671735262",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b224663a7ab80985",
            "tags": {
              "Environment": "DEV",
              "Name": "server1",
              "Owner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0109432b7f58f5725",
              "sg-055dd52193f00439b"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_class01",
            "aws_security_group.sg_1",
            "aws_security_group.sg_2",
            "aws_subnet.subnet3",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773845126462:internet-gateway/igw-02c05adb1b56eb733",
            "id": "igw-02c05adb1b56eb733",
            "owner_id": "773845126462",
            "tags": {
              "Name": "gateway_main"
            },
            "vpc_id": "vpc-0b2876bc21e5751ca"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e2fb3c7f7c38a4fe",
            "owner_id": "773845126462",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c05adb1b56eb733",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "r_main"
            },
            "vpc_id": "vpc-0b2876bc21e5751ca"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r_assoc_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eac1d408c07445d9",
            "route_table_id": "rtb-0e2fb3c7f7c38a4fe",
            "subnet_id": "subnet-0939b9d1a0200a681"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet1",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r_assoc_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082dfb12b5d859a1b",
            "route_table_id": "rtb-0e2fb3c7f7c38a4fe",
            "subnet_id": "subnet-0080b32e2e196a5c7"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet2",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r_assoc_subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033ddf3bce56fe89b",
            "route_table_id": "rtb-0e2fb3c7f7c38a4fe",
            "subnet_id": "subnet-0b224663a7ab80985"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet3",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773845126462:security-group/sg-055dd52193f00439b",
            "description": "security group que permite ping y ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055dd52193f00439b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_1",
            "name_prefix": "",
            "owner_id": "773845126462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2876bc21e5751ca"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773845126462:security-group/sg-0109432b7f58f5725",
            "description": "security group que permite http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0109432b7f58f5725",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_2",
            "name_prefix": "",
            "owner_id": "773845126462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2876bc21e5751ca"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773845126462:subnet/subnet-0939b9d1a0200a681",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0939b9d1a0200a681",
            "map_public_ip_on_launch": true,
            "owner_id": "773845126462",
            "tags": {
              "Name": "subnet1_eu-west-1b"
            },
            "vpc_id": "vpc-0b2876bc21e5751ca"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773845126462:subnet/subnet-0080b32e2e196a5c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0080b32e2e196a5c7",
            "map_public_ip_on_launch": true,
            "owner_id": "773845126462",
            "tags": {
              "Name": "subnet2_eu-west-1c"
            },
            "vpc_id": "vpc-0b2876bc21e5751ca"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773845126462:subnet/subnet-0b224663a7ab80985",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-0b224663a7ab80985",
            "map_public_ip_on_launch": true,
            "owner_id": "773845126462",
            "tags": {
              "Name": "subnet3_eu-west-1c"
            },
            "vpc_id": "vpc-0b2876bc21e5751ca"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773845126462:vpc/vpc-0b2876bc21e5751ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0862811a6e28a9ee1",
            "default_route_table_id": "rtb-0e3a586e1ddb18ee1",
            "default_security_group_id": "sg-003536644ba638d2d",
            "dhcp_options_id": "dopt-0fc3b269",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b2876bc21e5751ca",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e3a586e1ddb18ee1",
            "owner_id": "773845126462",
            "tags": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}